test/classes/initializers/phase1/hasLoopBad3.good
hasLoopBad3.chpl:6: In initializer:
hasLoopBad3.chpl:9: error: multiple initializations of field "highestNum"
